--- a/MobileApp/SunBatherApp/app/components/header.scss
+++ b/MobileApp/SunBatherApp/app/components/header.scss
@@ -21,7 +21,7 @@
   }
   
   .header-buttons Label.active {
-    border-bottom-color: #000000;
+    border-bottom-color: #FF8C00;
     border-bottom-width: 2;
     height: 34;
   }
