--- a/MobileApp/SunBatherApp/app/controller/controller.scss
+++ b/MobileApp/SunBatherApp/app/controller/controller.scss
@@ -2,7 +2,7 @@
     font-size: 18;
     padding-top: 6;
     height: 42;
-}
+  }
 
 .system-id {
     @extend .field-header;
@@ -35,11 +35,31 @@
 
 .system-datafield-controller-settings {
     @extend .system-datafield-controller;
-    height: 126;
+    height: 78;
+}
+
+.system-datafield-controller-settings TextField {
+    font-size: 16;
+    color: #FFF;
+    height: 38;
 }
 
 .system-datafield-controller-status {
     @extend .system-datafield-controller;
     height: 84;
     margin-bottom: 106;
+}
+
+.visible {
+    font-size: 16;
+    background-color: #1E90FF;
+    height: 40;
+}
+
+.opaque {
+    font-size: 16;
+    padding-top: 6;
+    background-color: #1E90FF;
+    opacity: 0.5;
+    height: 42;
 }
