--- a/MobileApp/SunBatherApp/app/graphs/graph.scss
+++ b/MobileApp/SunBatherApp/app/graphs/graph.scss
@@ -1,7 +1,13 @@
 .graph-data-page {
     font-size: 18;
     margin-top: 2;
-    height: 336;
+    height: 336; 
+}
+
+.graph-data-page-selected {
+    font-size: 18;
+    margin-top: 2;
+    height: 290; 
 }
 
 .field-header {
@@ -55,3 +61,4 @@
     margin-top: 6;
     background-color: #0032f8;
 }
+
