--- a/MobileApp/SunBatherApp/app/graphs/graph.scss
+++ b/MobileApp/SunBatherApp/app/graphs/graph.scss
@@ -73,3 +73,10 @@
     background-color: #1E90FF;
 
 }
+
+.list-data Label.active {
+    font-size: 15;
+    margin-top: 6;
+    background-color: #00BFFF;
+
+}
