--- a/MobileApp/SunBatherApp/app/graphsCompare/compare.scss
+++ b/MobileApp/SunBatherApp/app/graphsCompare/compare.scss
@@ -1,6 +1,6 @@
 .graph-data-page {
     font-size: 18;
-    height: 368; 
+    height: 320; 
 }
 
 .graph-data-info {
@@ -10,25 +10,32 @@
 
 .graph-data-page-selected {
     font-size: 18;
+    margin-top: 2;
     height: 290; 
 }
 
 .field-header {
     font-size: 18;
+    padding-top: 4;
+    height: 38;
+}
+
+.sub-headings {
+    font-size: 16;
     padding-top: 5;
-    height: 40;
+    height: 36;
 }
 
 .field-data-header {
-    font-size: 16;
-    padding-top: 5;
-    height: 36; 
+    font-size: 14;
+    padding-top: 4;
+    height: 32;
 }
 
 .field-data {
-    font-size: 14;
-    padding-top: 6;
-    height: 34;
+    font-size: 12;
+    padding-top: 4;
+    height: 30;
 }
 
 .graph-header {
@@ -36,9 +43,14 @@
     background-color: #0032f8;
 }
 
+.graph-stats-title {
+    @extend .sub-headings;
+    margin-top: 3;
+    background-color: #0032f8;
+}
+
 .graph-stats-header {
     @extend .field-data-header;
-    margin-top: 3;
     background-color: #f82500;
 }
 
@@ -59,7 +71,7 @@
 }
 
 .options-data TextField {
-    font-size: 14;
+    font-size: 12;
     margin-top: -1;
     color: #FFF;
     height: 30;
@@ -75,6 +87,7 @@
     font-size: 15;
     margin-top: 6;
     background-color: #1E90FF;
+
 }
 
 .list-data Label.active {
