--- a/MobileApp/SunBatherApp/app/home/index.scss
+++ b/MobileApp/SunBatherApp/app/home/index.scss
@@ -1,65 +1,71 @@
-.field-header {
-    font-size: 18;
-    padding-top: 5;
-    height: 40;
-}
+.index-page-styles {
+    .field-header {
+        font-size: 18;
+        padding-top: 5;
+        height: 40;
+    }
 
-.system-data-header-status {
-    @extend .field-header;
-    background-color: #FF8C00;
-}
+    .field-data-header {
+        font-size: 14;
+        padding-top: 4;
+        height: 31;
+    }
 
-.system-data-header-conditions {
-    @extend .field-header;    
-    margin-top: 4;
-    background-color: #CD5C5C;
-}
+    .system-data-header-status {
+        @extend .field-header;
+        background-color: #0032f8;
+    }
 
-.system-datafield {
-    font-size: 14;
-    height: 62; 
-    background-color: #1E90FF;
-    padding-top: 6;
-}
+    .system-data-header-conditions {
+        @extend .field-header;    
+        margin-top: 4;
+        background-color: #0032f8;
+    }
 
-.system-data-sub-header {
-    border-bottom-color: #00CED1;
-    border-bottom-width: 2;
-}
+    .system-datafield {
+        @extend .field-data-header;
+        background-color: #f82500;
+    }
 
-.graph-data {
-    font-size: 18;
-    margin-top: 4;
-    height: 303;
-}
+    .system-datafield-data {
+        @extend .field-data-header;
+        background-color: #1E90FF;;
+    }
 
-.graph-data-header {
-    @extend .field-header;
-    background-color:#4B0082;
-}
+    .graph-data {
+        font-size: 18;
+        margin-top: 4;
+        height: 303;
+    }
 
-.graph-data-info {
-    font-size: 12;
-    background-color: #1E90FF;
-}
+    .graph-data-header {
+        @extend .field-header;
+        background-color:#0032f8;
+    }
 
-.view-other {
-    font-size: 18;
-    margin-top: 4;
-    padding-top: 3;
-    background-color: #1E90FF;
-    border-width: 2;
-    height: 40;
-}
+    .graph-data-info {
+        font-size: 12;
+        background-color: #1E90FF;
+    }
 
-.horizontal-Axis {
-    label-Fit-Mode: Rotate;
-    line-Hidden: false;
-    line-color: white;
-    line-Thickness: 1
-}
+    .view-other {
+        font-size: 18;
+        margin-top: 4;
+        padding-top: 3;
+        background-color: #1E90FF;
+        border-width: 2;
+        height: 40;
+    }
 
-.vertical-Axis {
-    line-color: white;
-    line-Thickness: 1
+    .horizontal-Axis {
+        label-Fit-Mode: Rotate;
+        line-Hidden: false;
+        line-color: white;
+        line-Thickness: 1
+    }
+
+    .vertical-Axis {
+        line-color: white;
+        line-Thickness: 1
+    }
 }
