--- a/MobileApp/SunBatherApp/app/connect/connect.scss
+++ b/MobileApp/SunBatherApp/app/connect/connect.scss
@@ -6,10 +6,22 @@
         height: 42;
     }
 
-    .system-id {
+    .button-search {
         @extend .field-header;
         margin-top: 200;
         margin-bottom: 1;
         background-color: #0032f8;
+    }
+
+    .button-connect {
+        @extend .field-header;
+        margin-top: 10;
+        margin-bottom: 1;
+        background-color: #f80000;
+    }
+
+    .search-logo {
+        margin-top: 10;
+        height: 50;
     }
 }
