--- a/MobileApp/SunBatherApp/app/controller/controller.scss
+++ b/MobileApp/SunBatherApp/app/controller/controller.scss
@@ -8,58 +8,63 @@
     .system-id {
         @extend .field-header;
         margin-top: 2;
-        background-color: #0032f8;
+        background-color: #1e73be;
     }
 
     .system-settings {
         @extend .field-header;
         margin-top: 4;
-        background-color: #0032f8;
+        background-color: #1e73be;
     }
 
     .system-status {
         @extend .field-header;
         margin-top: 4;
-        background-color: #0032f8;
+        background-color: #1e73be;
     }
 
     .system-datafield-controller {
         font-size: 16;
         padding-top: 7;
-        background-color: #1E90FF;
+        background-color: white;
+        color: black;
     }
 
     .system-datafield-controller-id {
         @extend .system-datafield-controller;
         height: 42;
+        
     }
 
     .system-datafield-controller-settings {
         @extend .system-datafield-controller;
         height: 78;
+        
     }
 
     .system-datafield-controller-settings TextField {
         font-size: 16;
-        color: #FFF;
+        color: black;
         height: 38;
+        
     }
 
     .system-datafield-controller-status {
         @extend .system-datafield-controller;
         height: 84;
+        
     }
 
     .visible {
         font-size: 16;
-        background-color: #1E90FF;
+        background-color: #1e73be;
         height: 40;
     }
 
     .opaque {
         font-size: 16;
         padding-top: 6;
-        background-color: #1E90FF;
+        background-color: #1e73be;
         opacity: 0.5;
         height: 42;
     }
@@ -69,8 +74,8 @@
         font-size: 18;
         margin-top: 137;
         padding-top: 3;
-        background-color: #1E90FF;
-        border-width: 2;
+        background-color: #1e73be;
+        border-width: 0;
         height: 40;
     }
 }
