CSS Changes Sprint3

--- a/MobileApp/SunBatherApp/app/connect/connect.scss
+++ b/MobileApp/SunBatherApp/app/connect/connect.scss
@@ -11,13 +11,14 @@
         margin-top: 200;
         margin-bottom: 1;
         background-color: #1e73be;
+        color: white;
     }
 
     .button-connect {
         @extend .field-header;
         margin-top: 10;
         margin-bottom: 1;
-        color: black;
+        color: white;
         background-color: #1e73be;
     }
 
