--- a/MobileApp/SunBatherApp/app/connect/connect.scss
+++ b/MobileApp/SunBatherApp/app/connect/connect.scss
@@ -25,4 +25,11 @@
         margin-top: 10;
         height: 50;
     }
+
+    .list-data {
+        font-size: 15;
+        margin-top: 6;
+        background-color: #1e73be;
+
+    }
 }
