Footer for Icons

--- a/MobileApp/SunBatherApp/app/graphs/graph.scss
+++ b/MobileApp/SunBatherApp/app/graphs/graph.scss
@@ -76,6 +76,8 @@
         @extend .field-header;    
         margin-top: 2;
         background-color: #1e73be;
+        border-width: 1;
+        border-color: white;
     }
 
     .list-data {
