--- a/MobileApp/SunBatherApp/app/home/index.scss
+++ b/MobileApp/SunBatherApp/app/home/index.scss
@@ -27,7 +27,8 @@
         @extend .field-data-header;
         background-color: white;
         color: black;
-        font-size: 15;
+        font-size: 20px;
+        font-weight: 00;
     }
 
     .system-datafield-data {
