--- a/MobileApp/SunBatherApp/app/connect/connect.scss
+++ b/MobileApp/SunBatherApp/app/connect/connect.scss
@@ -44,6 +44,13 @@
         background-color: #1e73be;
     }
 
+    .button-disconnect {
+        @extend .field-header;
+        margin-top: 250;
+        margin-bottom: 1;
+        background-color: #1e73be;
+    }
+
     .opaque {
         @extend .field-header;
         margin-top: 10;
@@ -56,6 +63,11 @@
     .search-logo {
         margin-top: 10;
         height: 20;
+    }
+
+    .success-logo {
+        font-size: 35;
+        color: black;
     }
 
     .list-data {
