--- a/MobileApp/SunBatherApp/app/connect/connect.scss
+++ b/MobileApp/SunBatherApp/app/connect/connect.scss
@@ -46,7 +46,7 @@
 
     .button-disconnect {
         @extend .field-header;
-        margin-top: 250;
+        margin-top: 200;
         margin-bottom: 1;
         background-color: #1e73be;
     }
@@ -66,8 +66,10 @@
     }
 
     .success-logo {
+        margin-top: 10;
         font-size: 35;
         color: black;
+        height: 42;
     }
 
     .list-data {
