--- a/MobileApp/SunBatherApp/app/components/header.scss
+++ b/MobileApp/SunBatherApp/app/components/header.scss
@@ -14,4 +14,10 @@
     padding-right: 20;
   }
 
+  .header-buttons Label.active{
+    border-bottom-color:  #ff8c00;
+    border-bottom-width: 3;
+    height: 34;
+  }
+
 }
