--- a/MobileApp/SunBatherApp/app/graphs/graph.scss
+++ b/MobileApp/SunBatherApp/app/graphs/graph.scss
@@ -83,14 +83,14 @@
     .list-data {
         font-size: 15;
         margin-top: 3;
-        background-color: #2599ff;
+        background-color: #1e73be;
         color: #FFF;
     }
 
     .list-data Label.active {
         font-size: 15;
         margin-top: 6;
-        background-color: #1e73be
+        background-color: #2599ff;
     }
 
     .horizontal-Axis {
