--- a/MobileApp/SunBatherApp/app/home/index.scss
+++ b/MobileApp/SunBatherApp/app/home/index.scss
@@ -28,7 +28,7 @@
         background-color: white;
         color: black;
         font-size: 20px;
-        font-weight: 00;
+        //font-weight: 00;
     }
 
     .system-datafield-data {
