--- a/MobileApp/SunBatherApp/app/components/header.scss
+++ b/MobileApp/SunBatherApp/app/components/header.scss
@@ -8,15 +8,9 @@
     font-weight: bold;
     background-color: #1e73be;
     text-align: center;  
-    height: 80;
-    padding-top: 35;
+    height: 280px;
+    padding-top: 112px;
     padding-left: 20;
     padding-right: 20;
-  }
-
-  .header-buttons Label.active{
-    border-bottom-color:  #ff8c00;
-    border-bottom-width: 3;
-    height: 34;
   }
 }
