--- a/MobileApp/SunBatherApp/app/home/index.scss
+++ b/MobileApp/SunBatherApp/app/home/index.scss
@@ -2,7 +2,7 @@
     .field-header {
         font-size: 18;
         padding-top: 5;
-        height: 40;
+        height: 140px;
         color: white;    
     }
 
